--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -337,8 +337,7 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-                    margin-top: 1%;
-
+                    margin: 20px 0px;
 
                     @media (max-width: 425px) {
                         width: 100%;
@@ -356,11 +355,43 @@
 							display: block;
                             // margin-top: -45px;
 						}
+
+                        .text_search{
+                            width: 35%;
+                            margin: 0px 15px;
+
+                            @media (max-width: 425px) {
+                                width: 100%;
+                                margin: 0px;
+                            }
+                        }
+
+                        .text_attributes{
+                            width: 65%; 
+                            margin: 0px 15px;
+
+                            @media (max-width: 425px) {
+                                width: 100%;
+                                margin: 20px 0px 0px 0px;
+                            }
+
+                            .attributes{
+                                display: flex; 
+                                justify-content: 
+                                space-between; 
+                                margin-top: 10px;
+
+                                @media (max-width: 425px) {
+                                    display: block; 
+                                }
+                            }
+                        }
+
 					}
 					
 					.compound{
                         display: flex;
-                        margin: 15px;
+                        // margin: 15px;
                         min-width: fit-content;
 
                         @media (max-width: 425px) {
@@ -549,9 +580,10 @@
                         }
                     }
                     &.priceRange {
+                        height: fit-content;
                         width: 18%;
 
-                        margin: 0% 15px;
+                        // margin: 0% 15px;
                         border: 1px solid #cbcaca;
                         border-radius: 10px;
                         box-shadow: 0 3px 6px #59595919;
@@ -620,7 +652,7 @@
                             }
                         }
                         ul.dropdown-menu {
-                            margin-top: 25px !important ;
+                            margin-top: 1px !important ;
                             // display: block;
                             padding: 16px;
                             border-top: none;
@@ -701,7 +733,8 @@
                         }
                     }
                     &.realState {
-                        min-width: 15%!important;
+                        height: fit-content;
+                        min-width: 20%!important;
                         max-width: 14%;
                         @media (max-width: 1610px) {
                             max-width: 19%;
@@ -710,7 +743,7 @@
                         @media (max-width: 768px) {
                             max-width: 100%;
                         }
-                        margin: 0% 15px;
+                        // margin: 0% 15px;
                         @media (max-width: 425px) {
                             margin: 0%;
                             padding: 10px 0px;
@@ -719,10 +752,11 @@
 
                     }
                     &.city {
+                        height: fit-content;
                         // max-width: 11.99999%;
-                        min-width: 15%!important;
+                        min-width: 18%!important;
     
-                        margin: 0% 15px;
+                        // margin: 0% 15px;
                         @media (max-width: 425px) {
                             margin: 0%;
                             padding: 10px 0px
