--- a/src/app/shared/components/set-priorites/set-priorites.component.scss
+++ b/src/app/shared/components/set-priorites/set-priorites.component.scss
@@ -10,13 +10,21 @@
             font-size: 30px;
             padding: 30px 0 0;
             font-family: "Rubik-bold";
+            
+            @media (max-width: 425px) {
+                font-size: 25px;
+            }
         }
         .sm-title {
             font-size: 20px;
-            color: #ababb6;
+            color: #ffffff;
             font-family: "Rubik-Regular";
             span {
                 color: #fff;
+            }
+
+            @media (max-width: 425px) {
+                font-size: 13px;
             }
         }
     }
@@ -27,10 +35,11 @@
     }
 }
 .main-content {
-    margin-top: -175px;
+    margin-top: -120px;
     padding-bottom: 35px;
 
     @media (max-width: 425px) {
+        margin-top: -45px;
         padding-bottom: 0px;
     }
 
@@ -39,9 +48,9 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #fff;
-            border-radius: 20px;
-            padding: 2% 0%;
+            // background-color: #fff;
+            // border-radius: 20px;
+            // padding: 2% 0%;
 
             @media (max-width: 425px) {
                 display: block;
@@ -383,6 +392,16 @@
                             @media (max-width: 425px) {
                                 // margin-top: 15px;
                                 // margin-bottom: 10px;
+                            }
+
+                            span{
+                                margin: 0px 10px; 
+                                padding: 0px; 
+                                cursor: pointer;
+    
+                                @media (max-width:425px){
+                                    margin: 10px 0px; 
+                                }
                             }
 
                         }
