--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -501,8 +501,9 @@
                         </div>
                         <div class="col-12">
                             <div class="row">
-                                <button (click)="navigateToBlogs()"
-                                    class="btn button-success more">{{'button.actions.More' | translate}}</button>
+                                <!-- <button (click)="navigateToBlogs()"
+                                    class="btn button-success more">{{'button.actions.More' | translate}}
+                                </button> -->
 
                             </div>
                         </div>
@@ -563,7 +564,7 @@
             <div class="options">
                 <div class="all-options">
                     <div class="text_search">
-                        <span style="font-family: cursive; font-weight: bolder;"> {{'buy.Text search' | translate}} </span>
+                        <span style="font-family: 'Rubik-bold'; font-weight: bolder;"> {{'buy.Text search' | translate}} </span>
 
                         <div style="display: flex; align-items: center; margin-top: 10px;">
 
@@ -600,7 +601,7 @@
                     </div>
 
                     <div class="text_attributes">
-                        <span style="font-family: cursive; font-weight: bolder;"> {{'buy.Attributes search' | translate}} </span>
+                        <span style="font-family: 'Rubik-bold'; font-weight: bolder;"> {{'buy.Attributes search' | translate}} </span>
 
                         <div class="attributes">
                             <div class="ngSelect city">
