--- a/src/app/shared/components/set-priorites/set-priorites.component.html
+++ b/src/app/shared/components/set-priorites/set-priorites.component.html
@@ -20,7 +20,7 @@
                     <!-- filters  -->
                     <div class="col-xs-12 col-xl-12 filters-list order-1 order-xl-0">
                         <div style="background-color: #fff; border-radius: 20px; padding: 2% 0%;">
-                            <span style="font-family: cursive; font-weight: bolder; padding: 0px 20px;
+                            <span style="font-family: 'Rubik-bold'; font-weight: bolder; padding: 0px 20px;
                             display: flex;"> {{'setPriorities.Hint 1' | translate}} </span>
 
 
@@ -257,7 +257,7 @@
                     <div class="col-xs-12 col-xl-12 priorites-list order-1 order-xl-0" id="confirm">
                         <div style="background-color: #fff; border-radius: 20px; padding: 2% 0%;">
 
-                            <span style="font-family: cursive; font-weight: bolder; padding: 0px 20px;
+                            <span style="font-family: 'Rubik-bold'; font-weight: bolder; padding: 0px 20px;
                             display: flex;"> {{'setPriorities.Hint 2' | translate}} </span>
 
                             <div class="mt-3 main" style="margin: 0px !important;">
